objects/Account_Plan_Team__c.object
<CustomObject>
    <description>R1_R-0646</description>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <description>R1_R-0647</description>
        <label>Account plan</label>
        <referenceTo>AP_Account_Plan__c</referenceTo>
        <relationshipLabel>AP Teams</relationshipLabel>
        <relationshipName>Account_Plan_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User_Role__c</fullName>
        <label>User Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Service User</fullName>
                </value>
                <value>
                    <fullName>HSE User</fullName>
                </value>
                <value>
                    <fullName>Key Account Manager</fullName>
                </value>
                <value>
                    <fullName>Marketing &amp; Business User</fullName>
                </value>
                <value>
                    <fullName>Sales User</fullName>
                </value>
                <value>
                    <fullName>Supply Chain User</fullName>
                </value>
                <value>
                    <fullName>Technical User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Title__c</fullName>
        <description>R1_R-0646</description>
        <formula>User__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R1_R-0646</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plan_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>AP Team</label>
    <nameField>
        <displayFormat>APT-{000000}</displayFormat>
        <label>Account Plan Team ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AP Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>